Hero - Fix z-index issue with header and hero section

--- a/assets/application.css
+++ b/assets/application.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.cdnfonts.com/css/helvetica-neue-55?styles=16008");
 body, html {
-  margin: 0px;
-  padding: 0px;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 * {
@@ -14,21 +15,29 @@ body, html {
 }
 
 header {
+  background: transparent;
   display: flex;
   flex-direction: row;
-  height: 100%;
-  position: fixed;
-  top: 0px;
+  left: 0;
+  position: relative;
+  top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 10;
 }
-header .left-col {
-  border-right: 2px solid var(--theme-color-primary);
-}
-header .left-col img {
+header img {
   height: 37px;
   margin: 25px 32px 0 36px;
   width: 37px;
+}
+header .right-border {
+  background: var(--theme-color-primary);
+  display: inline-block;
+  height: 100vh;
+  left: 103px;
+  position: fixed;
+  top: 0px;
+  width: 2px;
+  z-index: 9;
 }
 header .nav-menu {
   color: var(--theme-color-primary);
@@ -65,7 +74,7 @@ header .nav-menu ul li a.active-menu::after {
   border-bottom: 2px solid var(--theme-color-primary);
   content: " ";
   height: 2px;
-  left: 0px;
+  left: 0;
   position: absolute;
   top: 30px;
   width: 17px;
@@ -103,7 +112,7 @@ header .locales-menu ul li a.active-menu::after {
   border-bottom: 2px solid var(--theme-color-primary);
   content: " ";
   height: 2px;
-  left: 0px;
+  left: 0;
   position: absolute;
   top: 30px;
   width: 17px;
@@ -116,13 +125,21 @@ header .locales-menu ul li a.active-menu::after {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
   height: 100vh;
   position: absolute;
+  top: 0;
   width: 100%;
+}
+.hero::before {
+  content: "";
+  inset: 0;
+  position: absolute;
+  z-index: -1;
 }
 .hero .grid-layout {
   display: grid;
-  height: 100%;
-  grid-template-rows: 225px minmax(auto, max-content) auto;
   grid-template-columns: 173px auto;
+  grid-template-rows: 225px minmax(auto, max-content) auto;
+  height: 100%;
+  position: relative;
 }
 .hero .grid-layout .title {
   color: var(--theme-color-primary);
