--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,8 +1,9 @@
 @import url('https://fonts.cdnfonts.com/css/helvetica-neue-55?styles=16008');
 
 body, html {
-  margin: 0px;
-  padding: 0px;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 * {
