--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -28,7 +28,7 @@
         border-bottom: 2px solid var(--theme-color-primary);
         content: " ";
         height: 2px;
-        left: 0px;
+        left: 0;
         position: absolute;
         top: 30px;
         width: 17px;
@@ -38,22 +38,30 @@
 }
 
 header {
+  background: transparent;
   display: flex;
   flex-direction: row;
-  height: 100%;
-  position: fixed;
-  top: 0px;
+  left: 0;
+  position: relative;
+  top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 10;
 
-  .left-col {
-    border-right: 2px solid var(--theme-color-primary);
+  img {
+    height: 37px;
+    margin: 25px 32px 0 36px;
+    width: 37px;
+  }
 
-    img {
-      height: 37px;
-      margin: 25px 32px 0 36px;
-      width: 37px;
-    }
+  .right-border {
+    background: var(--theme-color-primary);
+    display: inline-block;
+    height: 100vh;
+    left: calc(37px + 32px + 34px);
+    position: fixed;
+    top: 0px;
+    width: 2px;
+    z-index: 9;
   }
 
   .nav-menu {
